# xest_hora

./: README.md  pyproject.toml
xest_hora/: aggregation.py  main.py
xest_hora/input/: fixed_teacher_calendar_task_day_times.py  input_data.py
xest_hora/optimization/: aggregation.py  example.py  main.py  optimization_model.py  utils.py
xest_hora/optimization/input/: calendar_tasks.py  fixed_teacher_calendar_task_day_times.py  input_data.py  playtime.py  teacher_calendar_tasks.py
xest_hora/optimization/output/: calendar.py
xest_hora/output/: calendar.py
xest_hora/streamlit/: Home.py  __init__.py  streamlit_calendar_tasks.py  streamlit_calendars.py  streamlit_list.py  streamlit_multi_object.py  streamlit_teacher_tasks.py
xest_hora/streamlit/data/: days.yaml  times.yaml
xest_hora/streamlit/data/class_tasks/: 1A EP.parquet  2B EP.parquet
xest_hora/streamlit/data/initial_class_calendar/: 1A EP.parquet  2B EP.parquet
xest_hora/streamlit/data/initial_teacher_calendar/: Noa Fuertes Opazo.parquet
xest_hora/streamlit/data/teacher_class_tasks/: Noa Fuertes Opazo.parquet
xest_hora/streamlit/data/teacher_tasks/: Noa Fuertes Opazo.parquet
xest_hora/streamlit/pages/: 1_Información Clases.py  2_Información Profesores.py  3_Calendarios.py
